Adding update checking